--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,4 +18,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#outlinetext{
+  background: -webkit-linear-gradient(-45deg, #16C79E, #C5DA45);
+  background-clip: padding-box;
+  padding: 12px;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 6px transparent;  
+  font-weight: 900;
+  font-size: 110px;
+  line-height: 100px;
+  letter-spacing: 0.02em;
 }
