--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,19 @@ code {
   background: linear-gradient(90deg, #16C79E 2.29%, #C5DA45 98.62%);
   border-radius: 50px;
 }
+
+#newsletterline{
+  margin-right: 27rem;
+}
+
+@media only screen and (max-width: 640px) {
+  #outlinetext{
+    font-size: 60px;
+    line-height: 60px;
+    padding: 8px;
+    -webkit-text-stroke: 5px transparent;
+  }
+  #newsletterline{
+    margin-right: 4rem;
+  }
+}
