--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
 }
 
 #outlinetext{
-  background: -webkit-linear-gradient(-45deg, #16C79E, #C5DA45);
+  background: -webkit-linear-gradient(-45deg, #16C79E, #C5DA45 70%);
   background-clip: padding-box;
   padding: 12px;
   -webkit-background-clip: text;
@@ -47,6 +47,20 @@ code {
   margin-right: 27rem;
 }
 
+#carousel{
+  max-height: 45rem;
+}
+.slick-dots{
+  bottom: 50px !important;
+  z-index: 20;
+}
+.slick-dots li{
+  opacity: 0.4;
+}
+.slick-dots .slick-active,.slick-dots li:hover{
+  opacity: 1;
+}
+
 @media only screen and (max-width: 640px) {
   #outlinetext{
     font-size: 60px;
@@ -56,5 +70,17 @@ code {
   }
   #newsletterline{
     margin-right: 4rem;
+  }
+  .slick-dots{
+    bottom: 150px !important;
+  }
+}
+
+@media (min-width: 640px) { 
+  #carouselcard{
+    box-shadow: -40px 25px 50px 6px rgb(0 0 0/0.8)
+  }
+  #carousel{
+    max-height: 40rem;
   }
 }
