--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,11 @@ code {
   max-height: 45rem;
 }
 .slick-dots{
-  bottom: 50px !important;
+  bottom: 40px !important;
+  z-index: 20;
+}
+.projectcarousel .slick-dots{
+  bottom: -80px !important;
   z-index: 20;
 }
 .slick-dots li{
@@ -78,6 +82,7 @@ code {
 
 @media (min-width: 640px) { 
   #carouselcard{
+    height: 38rem;
     box-shadow: -40px 25px 50px 6px rgb(0 0 0/0.8)
   }
   #carousel{
