--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,29 @@ code {
   opacity: 1;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(31, 30, 30);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #08ce92;
+  border-radius: 100vh;
+ 
+}
+
+#name, #message, #subject, #email{
+  background-color: rgba(47, 54, 70, 0.616);
+  font-size: 24;
+}
+
 @media only screen and (max-width: 768px) {
   #outlinetext {
     font-size: 60px;
