--- a/src/index.css
+++ b/src/index.css
@@ -98,10 +98,13 @@ code {
 ::-webkit-scrollbar-thumb {
   background: #08ce92;
   border-radius: 100vh;
- 
+
 }
 
-#name, #message, #subject, #email{
+#name,
+#message,
+#subject,
+#email {
   background-color: rgba(47, 54, 70, 0.616);
   font-size: 24;
 }
@@ -126,5 +129,19 @@ code {
 
   .slick-dots {
     bottom: -65px !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+}
+
+@media (max-width: 1024px) {
+
+  #memberCarousel .slick-list,
+  #memberCarousel .slick-track,
+  #memberCarousel .slick-slider {
+    height: 100% !important;
   }
 }
