Addition of new code
Signed-off-by: Abhijith Ganesh <git.watch.abhijith@outlook.com>

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,3 +2,8 @@
   font-family: "Space Grotesk";
   src: url("SpaceGrotesk-VariableFont_wght.ttf");
 }
+
+@font-face {
+  font-family: "OffBit";
+  src: url("OffBit/OffBitTrial-DotBold.ttf");
+}
